fix scroll/overflow bugs

--- a/timeline/src/styles/timeline-slots.css
+++ b/timeline/src/styles/timeline-slots.css
@@ -28,6 +28,7 @@ vertical slots in both the header AND the body
     display: flex;
     align-items: center; // vertical align
     justify-content: center; // horizontal align
+    overflow: hidden; // important so text doesn't bleed out and cause extra scroll
   }
 
   & .fc-timeline-header-row-chrono { // a row of times
